--- a/packages/formation/sass/site/_m-vet-nav.scss
+++ b/packages/formation/sass/site/_m-vet-nav.scss
@@ -8,7 +8,7 @@ body.va-pos-fixed {
 }
 
 #vetnav,
-[role="menu"] [role="menu"] {
+[role='menu'] [role='menu'] {
   // The main menu takes up the whole screen under the Menu button for xsmall & small screens
   // Sub menus also take up the whole screen to cover the main menu
   min-height: calc(100vh - #{$height-offset-xsmall});
@@ -30,12 +30,12 @@ body.va-pos-fixed {
   // shouldn't affect anything. However, it's here to show how the height is offset by the
   // vertical positioning.
   // top: $height-offset;
-  left: -0.9rem;
   overflow-y: scroll;
   position: absolute;
-  width: 103%;
+  width: 100%;
 
   // Just large enough to take precedence over any other dropdowns on the page and the VA Map
+  z-index: 1011;
 
   &.vetnav--submenu-expanded {
     #vetnav-menu {
@@ -88,7 +88,7 @@ body.va-pos-fixed {
 
   &::before {
     display: block;
-    content: " ";
+    content: ' ';
   }
 
   ul {
@@ -155,7 +155,7 @@ body.va-pos-fixed {
   }
 }
 
-[class^="vetnav-controller"] {
+[class^='vetnav-controller'] {
   position: absolute;
   top: 0;
   left: 0;
@@ -207,7 +207,7 @@ body.va-pos-fixed {
     }
   }
 
-  &[aria-expanded="true"] {
+  &[aria-expanded='true'] {
     @include media($medium-large-screen) {
       color: $color-base;
       background-color: $color-white;
@@ -216,7 +216,7 @@ body.va-pos-fixed {
     }
   }
 
-  &[aria-expanded="false"] {
+  &[aria-expanded='false'] {
     background-image: url(/img/plus-white.svg);
 
     &:hover {
@@ -259,7 +259,6 @@ body.va-pos-fixed {
   text-align: left;
   width: 100%;
   -webkit-font-smoothing: antialiased;
-  line-height: 1;
 
   @include media($medium-large-screen) {
     background: transparent url(/img/arrow-right.svg) right 1rem center
@@ -282,7 +281,7 @@ body.va-pos-fixed {
       text-decoration: underline;
     }
 
-    &[aria-expanded="true"] {
+    &[aria-expanded='true'] {
       background-color: $color-gray-lightest;
       border-bottom-color: $color-gray-warm-light;
       border-top-color: $color-gray-warm-light;
@@ -291,6 +290,7 @@ body.va-pos-fixed {
       font-weight: bold;
       text-decoration: inherit;
       position: relative;
+      z-index: 2;
     }
   }
 
@@ -329,6 +329,7 @@ body.va-pos-fixed {
     background-image: none;
     color: $color-white;
     display: block;
+    padding: 0.8rem 1.6rem;
     text-decoration: none;
 
     @include media($medium-large-screen) {
@@ -339,10 +340,6 @@ body.va-pos-fixed {
         text-decoration: underline;
       }
     }
-  }
-
-  .mm-links {
-    padding: 0.8rem 1.6rem;
   }
 
   @include media($medium-large-screen) {
@@ -360,6 +357,7 @@ body.va-pos-fixed {
     position: absolute;
     width: 100%;
     top: 0;
+    left: 30px;
     visibility: visible;
     margin: 0;
 
@@ -368,7 +366,6 @@ body.va-pos-fixed {
       background-color: $color-gray-lightest;
       height: 100%;
       margin-left: 23rem;
-      left: 30px;
       padding: 0.5rem 0 1.6rem;
       width: 31rem;
     }
@@ -403,9 +400,14 @@ body.va-pos-fixed {
     flex: 0 1 32.5rem;
     margin-left: 0;
     margin-right: 0;
+    z-index: 3;
   }
 
-  [href^="tel"] {
+  p {
+    margin: 0;
+  }
+
+  [href^='tel'] {
     text-decoration: none;
   }
 
@@ -415,7 +417,8 @@ body.va-pos-fixed {
     padding-left: 0;
   }
 
-  .va-dropdown {
+  .va-dropdown,
+  .sign-in-link {
     margin-left: 1rem;
   }
 
@@ -424,15 +427,19 @@ body.va-pos-fixed {
   }
 }
 
-[id="search"] {
+.sign-in-link {
+  white-space: nowrap;
+}
+
+[id='search'] {
   width: 30rem;
 
-  [type="text"] {
+  [type='text'] {
     margin: 0;
     flex: 1 0 20rem;
   }
 
-  [type="submit"] {
+  [type='submit'] {
     border-radius: 0 0.3rem 0.3rem 0;
     display: flex;
     flex: 1 0 3rem;
@@ -455,85 +462,4 @@ body.va-pos-fixed {
   .child-menu-opened {
     height: auto;
   }
-}
-
-.merger {
-  #vetnav {
-    // 100% width necessary for right aligned items
-    width: 100%;
-    left: initial;
-  }
-
-  @media (min-width: $xsmall-screen) and (max-width: $medium-screen - 1) {
-    #mega-menu {
-      // #vetnav {
-      //   min-height: unset;
-      // }
-      .login-container {
-        // due to these been nested, this has to have a higher z-level then vet-toolbar
-        position: relative;
-        top: -40px;
-      }
-    }
-
-    #vetnav {
-      // 100% width necessary for right aligned items
-      width: 100%;
-      left: initial;
-    }
-
-    #vetnav-controls {
-      margin-top: 7px;
-
-      svg {
-        margin-left: 0.8rem;
-      }
-    }
-
-    .mm-link-container {
-      padding-left: 10px;
-    }
-  }
-
-  // TD: need to update this on formation in the MegaMenu. If no title it should still align with the link row.
-  #vetnav-records-ms {
-    & + div {
-      .column-two h3 {
-        visibility: hidden;
-      }
-    }
-  }
-
-  #va-nav-controls {
-    position: relative;
-    width: 100px;
-
-    svg {
-      display: inline-block;
-      height: 1.6rem;
-      margin-left: 0.8rem;
-      width: 1rem;
-      vertical-align: 0;
-    }
-
-    path {
-      fill: $color-white;
-    }
-
-    @include media($medium-large-screen) {
-      display: none;
-    }
-  }
-
-  .vetnav-panel {
-    @include media($medium-large-screen) {
-      box-shadow: 0 5px 9px -3px $color-base;
-    }
-  }
-
-  // Toggle button on mobile
-  [class^="vetnav-controller"] {
-    position: relative !important;
-  }
-
 }
