--- a/packages/formation/sass/core.scss
+++ b/packages/formation/sass/core.scss
@@ -2,82 +2,83 @@
 // Note: if you add variable files in here, make sure you updated shared-variables.scss
 
 //============ VENDOR PARTIALS ==============//
-@import "~uswds/src/stylesheets/lib/bourbon";
-@import "~uswds/src/stylesheets/lib/neat";
-@import "~uswds/src/stylesheets/lib/normalize"; // Currently 3.0.3
+@import '~uswds/src/stylesheets/lib/bourbon';
+@import '~uswds/src/stylesheets/lib/neat';
+@import '~uswds/src/stylesheets/lib/normalize'; // Currently 3.0.3
 
-@import "~foundation-sites/scss/foundation/components/grid";
-@import "~foundation-sites/scss/foundation/components/block-grid";
+@import '~foundation-sites/scss/foundation/components/grid';
+@import '~foundation-sites/scss/foundation/components/block-grid';
 
-@import "~@fortawesome/fontawesome-free/scss/fontawesome";
-@import "~@fortawesome/fontawesome-free/scss/solid";
-@import "~@fortawesome/fontawesome-free/scss/brands";
-@import "~@fortawesome/fontawesome-free/scss/regular";
+@import '~@fortawesome/fontawesome-free/scss/fontawesome';
+@import '~@fortawesome/fontawesome-free/scss/solid';
+@import '~@fortawesome/fontawesome-free/scss/brands';
+@import '~@fortawesome/fontawesome-free/scss/regular';
 
 // ============ SETTINGS ============//
 // Order matters here! Please don't change it.
-@import "~uswds/src/stylesheets/core/variables";
+@import '~uswds/src/stylesheets/core/variables';
 
 // A VA partial. Here so that we can override the
 // USWDS breakpoint and grid variables from above before
 // the grid, alerts, etc are loaded.
-@import "base/b-variables";
-@import "base/b-breakpoints";
+@import 'base/b-variables';
+@import 'base/b-breakpoints';
 
-@import "~uswds/src/stylesheets/core/fonts";
-@import "~uswds/src/stylesheets/core/grid";
-@import "~uswds/src/stylesheets/core/utilities";
+@import '~uswds/src/stylesheets/core/fonts';
+@import '~uswds/src/stylesheets/core/grid';
+@import '~uswds/src/stylesheets/core/utilities';
 
 // VA mixins. Here so that we can override USWDS mixins.
 // Specifically, the "focus" mixin.
-@import "base/b-mixins";
+@import 'base/b-mixins';
 
-@import "~uswds/src/stylesheets/core/base";
+@import '~uswds/src/stylesheets/core/base';
 
 // ---- U.S. WEB DESIGN STANDARDS ELEMENTS/COMPONENTS --- //
-@import "~uswds/src/stylesheets/elements/buttons";
-@import "~uswds/src/stylesheets/elements/inputs";
-@import "~uswds/src/stylesheets/elements/labels";
-@import "~uswds/src/stylesheets/elements/list";
-@import "~uswds/src/stylesheets/elements/table";
-@import "~uswds/src/stylesheets/elements/typography";
-@import "~uswds/src/stylesheets/components/accordions";
-@import "~uswds/src/stylesheets/components/alerts";
-@import "~uswds/src/stylesheets/components/forms";
-@import "~uswds/src/stylesheets/components/sidenav";
-@import "~uswds/src/stylesheets/components/media-block";
-@import "~uswds/src/stylesheets/components/banner";
+@import '~uswds/src/stylesheets/elements/buttons';
+@import '~uswds/src/stylesheets/elements/inputs';
+@import '~uswds/src/stylesheets/elements/labels';
+@import '~uswds/src/stylesheets/elements/list';
+@import '~uswds/src/stylesheets/elements/table';
+@import '~uswds/src/stylesheets/elements/typography';
+@import '~uswds/src/stylesheets/components/accordions';
+@import '~uswds/src/stylesheets/components/alerts';
+@import '~uswds/src/stylesheets/components/forms';
+@import '~uswds/src/stylesheets/components/sidenav';
+@import '~uswds/src/stylesheets/components/media-block';
+@import '~uswds/src/stylesheets/components/banner';
 
 // ----- VA BASE (VARIABLES/HELPERS) ---- //
-@import "base/b-element-overrides";
-@import "base/b-functions";
-@import "base/b-utils";
-@import "base/b-font-faces";
+@import 'base/b-element-overrides';
+@import 'base/b-functions';
+@import 'base/b-utils';
+@import 'base/b-font-faces';
 
 // ----- VA GENERAL (MAIN FILE/OTHER) ---- //
-@import "base/va";
+@import 'base/va';
 
 // ----- VA MODULES ---- //
-@import "modules/m-external-link";
+@import 'modules/m-external-link';
 
 // ----- Layout ---- //
-@import "layout/flex-grid";
+@import 'layout/flex-grid';
 
 // ----- VA UTILITIES (UTILITIY OOCSS) ---- //
-@import "utilities/background-color";
-@import "utilities/border";
-@import "utilities/color";
-@import "utilities/display";
-@import "utilities/flexbox";
-@import "utilities/font-family";
-@import "utilities/font-size";
-@import "utilities/font-style";
-@import "utilities/font-weight";
-@import "utilities/height-width";
-@import "utilities/line-height";
-@import "utilities/margins";
-@import "utilities/measure";
-@import "utilities/padding";
-@import "utilities/text-align";
-@import "utilities/text-decoration";
-@import "utilities/visibility";
+@import 'utilities/background-color';
+@import 'utilities/border';
+@import 'utilities/color';
+@import 'utilities/display';
+@import 'utilities/flexbox';
+@import 'utilities/font-family';
+@import 'utilities/font-size';
+@import 'utilities/font-style';
+@import 'utilities/font-weight';
+@import 'utilities/height-width';
+@import 'utilities/line-height';
+@import 'utilities/margins';
+@import 'utilities/measure';
+@import 'utilities/padding';
+@import 'utilities/position';
+@import 'utilities/text-align';
+@import 'utilities/text-decoration';
+@import 'utilities/visibility';
