--- a/packages/formation/sass/modules/_va-pagination.scss
+++ b/packages/formation/sass/modules/_va-pagination.scss
@@ -20,7 +20,7 @@
 
     &:not(:empty) {
       @media (min-width: $small-screen) {
-        &a::before {
+        a::before {
           content: "\2039\a0\a0";
         }
       }
@@ -35,7 +35,7 @@
 
     &:not(:empty) {
       @media (min-width: $small-screen) {
-        &a::after {
+        a::after {
           content: "\a0\a0\203a";
         }
       }
