Primary focus same as hover

--- a/packages/formation/sass/modules/_m-button.scss
+++ b/packages/formation/sass/modules/_m-button.scss
@@ -18,6 +18,10 @@ button,
   }
 }
 
+.usa-button:focus {
+  background: $color-primary-darker;
+}
+
 .usa-button-primary {
   color: $color-white !important;
   &[href^='http'] {
