--- a/packages/formation/sass/modules/_m-button.scss
+++ b/packages/formation/sass/modules/_m-button.scss
@@ -3,33 +3,41 @@
 .usa-button:visited,
 .usa-button-primary:visited,
 button,
-[type="button"],
-[type="submit"],
-[type="reset"],
-[type="image"] {
+[type='button'],
+[type='submit'],
+[type='reset'],
+[type='image'] {
   background-color: $color-primary;
 
   &.usa-button-secondary {
     background: transparent;
+    &:focus,
+    &:hover {
+      background-color: $color-cool-blue-lightest;
+    }
   }
+}
+
+.usa-button:focus {
+  background: $color-primary-darker;
 }
 
 .usa-button-primary {
   color: $color-white !important;
-  &[href^=http] {
+  &[href^='http'] {
     @include no-sr-content;
 
     background-image: none;
     // TODO: clean up #content .main.interior a then remove !important
     text-decoration: none !important;
-
   }
 }
 
 // @todo Remove this once the USWDS upgrade is complete.
 .usa-accordion {
   .usa-button-secondary:focus {
-    box-shadow: inset 0 0 0 2px $color-primary-darkest, 0 0 3px $color-focus, 0 0 7px $color-focus;
+    box-shadow: inset 0 0 0 2px $color-primary-darkest, 0 0 3px $color-focus,
+      0 0 7px $color-focus;
   }
 }
 
@@ -62,7 +70,7 @@ button.short {
 
 // For links and buttons that look like links and have an icon.
 .va-icon-link,
-.va-icon-link[type="button"] {
+.va-icon-link[type='button'] {
   background: transparent;
   border-radius: 0;
   color: $color-primary !important;
@@ -85,7 +93,7 @@ button.short {
 
   span {
     display: inline-block;
-    padding-left: .5rem;
+    padding-left: 0.5rem;
     text-decoration: underline;
   }
 }
@@ -104,7 +112,7 @@ button.short {
     @include media($medium-large-screen) {
       display: block;
       height: 1.5rem;
-      margin-right: .25rem;
+      margin-right: 0.25rem;
       pointer-events: none;
       width: 1.5rem;
     }
