Copy over typography file from uswds 1.6
https://github.com/uswds/uswds/blob/v1.6.14/src/stylesheets/elements/_typography.scss

--- a/packages/formation/sass/core.scss
+++ b/packages/formation/sass/core.scss
@@ -40,7 +40,7 @@
 @import '~uswds/src/stylesheets/elements/labels';
 @import '~uswds/src/stylesheets/elements/list';
 @import '~uswds/src/stylesheets/elements/table';
-@import '~uswds/src/stylesheets/elements/typography';
+@import 'base/b-typography';
 @import '~uswds/src/stylesheets/components/accordions';
 @import '~uswds/src/stylesheets/components/alerts';
 @import '~uswds/src/stylesheets/components/forms';
