--- a/packages/formation/sass/base/_b-typography.scss
+++ b/packages/formation/sass/base/_b-typography.scss
@@ -213,12 +213,12 @@ dfn {
 .usa-width-five-sixths,
 .usa-width-one-twelfth {
   &:first-child {
-    > :first-child {
+    > :not(va-back-to-top):first-child {
       margin-top: 0;
     }
   }
 
-  > :first-child {
+  > :not(va-back-to-top):first-child {
     @include media($medium-screen) {
       margin-top: 0;
     }
