--- a/packages/formation/sass/modules/_va-pagination.scss
+++ b/packages/formation/sass/modules/_va-pagination.scss
@@ -12,47 +12,18 @@
   justify-content: center;
 
   button {
-    line-height: 2;
+    background-color: transparent;
     border: 0;
     color: $color-link-default;
-    background-color: transparent;
-    padding: 0;
     font-size: 0.9em;
     font-weight: 400;
+    line-height: 2;
+    padding: 0;
     transition: all 0.3s ease-in-out;
     transition-property: color, background-color, border-color;
   }
 
-  &-prev {
-    @media (max-width: $medium-screen) {
-      margin-left: -3rem;
-      padding: 0 1rem 0 0;
-    }
-
-    &:not(:empty) {
-      @media (min-width: $small-screen) {
-        button::before {
-          content: '\2039\a0\a0';
-        }
-      }
-    }
-  }
-
-  &-next {
-    @media (max-width: $medium-screen) {
-      margin-right: -3rem;
-      padding: 0 0 0 1rem;
-    }
-
-    &:not(:empty) {
-      @media (min-width: $small-screen) {
-        button::after {
-          content: '\a0\a0\203a';
-        }
-      }
-    }
-  }
-
+  // va-pagination-prev and va-pagination-next
   &-prev,
   &-next {
     display: flex;
@@ -72,12 +43,9 @@
     &:hover {
       text-decoration: underline;
     }
-
-    @media (min-width: $medium-screen) {
-      padding: 0 1rem;
-    }
   }
 
+  // va-pagination-inner
   &-inner {
     white-space: nowrap;
     overflow: hidden;
@@ -92,14 +60,6 @@
     button[aria-current='true'] {
       background-color: $color-primary;
       color: $color-white;
-    }
-
-    @media (max-width: $medium-screen) {
-      width: 20rem;
-    }
-
-    @media (min-width: $large-screen) {
-      width: 40rem;
     }
   }
 
@@ -116,5 +76,56 @@
   &-active button {
     background-color: $color-primary;
     color: $color-white;
+  }
+
+  // va-pagination-prev media queries
+  &-prev {
+    @media (max-width: $medium-screen) {
+      margin-left: -3rem;
+      padding: 0 1rem 0 0;
+    }
+
+    &:not(:empty) {
+      @media (min-width: $small-screen) {
+        button::before {
+          content: '\2039\a0\a0';
+        }
+      }
+    }
+  }
+
+  // va-pagination-next media queries
+  &-next {
+    @media (max-width: $medium-screen) {
+      margin-right: -3rem;
+      padding: 0 0 0 1rem;
+    }
+
+    &:not(:empty) {
+      @media (min-width: $small-screen) {
+        button::after {
+          content: '\a0\a0\203a';
+        }
+      }
+    }
+  }
+
+  // va-pagination-next and va-pagination-prev media queries
+  &-next,
+  &-prev {
+    @media (min-width: $medium-screen) {
+      padding: 0 1rem;
+    }
+  }
+
+  // va-pagination-inner media queries
+  &-inner {
+    @media (max-width: $medium-screen) {
+      width: 20rem;
+    }
+
+    @media (min-width: $large-screen) {
+      width: 40rem;
+    }
   }
 }
