--- a/packages/formation/sass/base/_b-variables.scss
+++ b/packages/formation/sass/base/_b-variables.scss
@@ -83,11 +83,12 @@ $color-green-light:          #4aa564;
 $color-gold-lightest:        #fff1d2;
 $color-gold-lighter:         #fad980;
 $color-gold-light:           #f9c642;
+$color-gold-50v:             #936F38; // This is something that's not in USWDS 1.6
 
 $color-visited:              $color-purple;
 $color-focus:                #3e94cf;
 
-$focus-outline:              2px solid $color-gold-light;
+$focus-outline:              2px solid $color-gold-50v;
 
 $color-cool-blue:           #205493;
 $color-cool-blue-light:     #4773aa;
