Update focus outline of .menu-item-container
This doesn't seem like a class that's used anymore

--- a/packages/formation/sass/modules/_m-nav-sidebar.scss
+++ b/packages/formation/sass/modules/_m-nav-sidebar.scss
@@ -206,7 +206,7 @@ $level-3-hover-padding: 8px 12px 8px 30px;
       }
 
       &:focus {
-        outline: 2px solid $color-gold;
+        outline: $focus-outline;
         outline-offset: 3px;
       }
     }
