--- a/packages/formation/sass/base/_va.scss
+++ b/packages/formation/sass/base/_va.scss
@@ -35,7 +35,7 @@ body {
   &:focus {
     position: inherit;
     top: auto;
-    outline: $focus-outline;
+    @include focus-gold-vivid-outline()
   }
 }
 
