--- a/packages/formation/sass/modules/_m-nav-sidebar.scss
+++ b/packages/formation/sass/modules/_m-nav-sidebar.scss
@@ -206,8 +206,7 @@ $level-3-hover-padding: 8px 12px 8px 30px;
       }
 
       &:focus {
-        outline: $focus-outline;
-        outline-offset: 3px;
+        @include focus-gold-vivid-outline;
       }
     }
 
