Tweak link focus styles
We're sticking with the double box-shadow for links in the header &
footer, but going with the outline approach for links in the main
content area due to the possibility of wrapping

--- a/packages/formation/sass/base/_va.scss
+++ b/packages/formation/sass/base/_va.scss
@@ -97,6 +97,18 @@ a {
   }
 }
 
+// Use outline focus styling for links in the main content area
+// since box-shadow styling doesn't look good on wrapped links
+main [href],
+va-banner [href] {
+  &:focus {
+    outline: $focus-outline;
+    background: $color-white;
+    color: $color-link-default;
+    box-shadow: unset;
+  }
+}
+
 // ====== Headings
 
 // H1 should only be used once at the top-level, so we can safely remove the margin-top.
