--- a/packages/formation/sass/base/_b-variables.scss
+++ b/packages/formation/sass/base/_b-variables.scss
@@ -88,6 +88,13 @@ $color-gold-50v:             #936F38; // This is something that's not in USWDS 1
 $color-visited:              $color-purple;
 $color-focus:                #3e94cf;
 
+// The focus outline is only used for anchor links in the main body
+// See this article for details:
+//  https://adhoc.team/2022/02/08/creating-focus-style-for-themable-design-system/
+// A double `box-shadow` is used for other focus styling, including
+// links in the header & footer since they are unlikely to wrap
+$focus-outline:              2px solid $color-gold-50v;
+
 $color-cool-blue:           #205493;
 $color-cool-blue-light:     #4773aa;
 $color-cool-blue-lighter:   #8ba6ca;
