Update focus styles (#822)
* Add new gold color & use it in base focus-outline

* Update mixin name

* Remove apparently unused mixin

* Update focus outline of .menu-item-container

This doesn't seem like a class that's used anymore

* Update outline focus color of "Skip to Content"

Not sure if this is a change that we will keep

* Switch to box-shadow approach

* Remove offset argument

* Bump major version

* Tweak link focus styles

We're sticking with the double box-shadow for links in the header &
footer, but going with the outline approach for links in the main
content area due to the possibility of wrapping

--- a/packages/formation/sass/base/_b-mixins.scss
+++ b/packages/formation/sass/base/_b-mixins.scss
@@ -87,19 +87,13 @@
   }
 }
 
-@mixin focus-gold-light-outline($offset: 2) {
-  outline: $focus-outline;
-  outline-offset: #{$offset}px;
-}
-
-@mixin focus-gold-lighter-highlight {
-  background: $color-gold-lighter;
-  outline: 2px solid $color-gold-lighter;
-  outline-offset: 0;
+@mixin focus-gold-vivid-outline {
+  box-shadow: 0 0 0 3px $color-white, 0 0 4px 6px $color-gold-50v;
+  outline: none;
 }
 
 @mixin focus {
-  @include focus-gold-light-outline;
+  @include focus-gold-vivid-outline;
 }
 
 @mixin color-transition {
@@ -153,8 +147,7 @@
     background: $color-link-default-hover;
   }
   &:focus {
-    @include focus-gold-light-outline;
-    outline-offset: 0;
+    @include focus-gold-vivid-outline;
   }
   &:disabled {
     text-decoration: none;
