--- a/packages/formation/sass/base/_b-mixins.scss
+++ b/packages/formation/sass/base/_b-mixins.scss
@@ -87,13 +87,19 @@
   }
 }
 
-@mixin focus-gold-vivid-outline {
-  box-shadow: 0 0 0 3px $color-white, 0 0 4px 6px $color-gold-50v;
-  outline: none;
+@mixin focus-gold-light-outline($offset: 2) {
+  outline: $focus-outline;
+  outline-offset: #{$offset}px;
+}
+
+@mixin focus-gold-lighter-highlight {
+  background: $color-gold-lighter;
+  outline: 2px solid $color-gold-lighter;
+  outline-offset: 0;
 }
 
 @mixin focus {
-  @include focus-gold-vivid-outline;
+  @include focus-gold-light-outline;
 }
 
 @mixin color-transition {
@@ -147,7 +153,8 @@
     background: $color-link-default-hover;
   }
   &:focus {
-    @include focus-gold-vivid-outline;
+    @include focus-gold-light-outline;
+    outline-offset: 0;
   }
   &:disabled {
     text-decoration: none;
